# sollearning

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/sollearning/: Cargo.toml
programs/sollearning/src/: constants.rs  error.rs  lib.rs  state.rs
programs/sollearning/src/instructions/: approve_proposal.rs  burn.rs  create_course.rs  create_emergency_multisig.rs  create_multisig.rs  create_program_config.rs  create_proposal.rs  create_student_account.rs  emergency_toggle.rs  execute_proposal.rs  initialize.rs  mint.rs  mod.rs  multisig.rs  register_educator.rs  register_student.rs  set_educator_status.rs  transfer.rs  update_course.rs  update_program_config.rs
programs/sollearning/src/instructions/config/: create_program_config.rs  create_program_config_struct.rs  mod.rs  update_program_config.rs  update_program_config_struct.rs
programs/sollearning/src/instructions/course/: create_course.rs  mod.rs  update_course.rs  update_course_struct.rs
programs/sollearning/src/instructions/educator/: mod.rs  register_educator.rs  set_educator_status.rs
programs/sollearning/src/instructions/emergency/: emergency_toggle.rs  mod.rs
programs/sollearning/src/instructions/initialize/: initialize.rs  initialize_struct.rs  mod.rs
programs/sollearning/src/instructions/multisig/: create_emergency_multisig.rs  create_multisig.rs  (+2 more)
programs/sollearning/src/states/: config.rs  course.rs  educator.rs  emergency.rs  mod.rs  program.rs  proposal.rs  signers.rs  student.rs
programs/sollearning/src/utils/: config.rs  mod.rs  pause.rs
(+49 files in other folders)
