[package]
name = "sollearning"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0", features = ["token"] }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
solana-program = "1.17.0"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]